@@ -1,5 +1,11 @@
 2013-01-12  Jonathan Yong  <jon_y@users.sourceforge.net>
 
+	* _mingw_mac.h: New __MINGW_MS_PRINTF helper macro.
+	Likewise for __MINGW_MS_SCANF, __MINGW_GNU_PRINTF and
+	__MINGW_GNU_SCANF.
+
+2013-01-12  Jonathan Yong  <jon_y@users.sourceforge.net>
+
 	* stdlib.h: Define __USE_MINGW_STRTOX if __USE_MINGW_ANSI_STDIO in use.
 	(strtod): Alias to __mingw_strtod if __USE_MINGW_STRTOX.
 	(strtof): Likewise to __mingw_strtof.
